# srh-checker

./: .gitignore  README.md  Zhurnal_anten.py  checks.py  correct.py  data_check.csv  data_quality.csv  first_check.py  oboznach.py  obshgraf.py  parsed_wide.csv  parsed_wide_fixed.csv  pyproject.toml  second_check.py  second_check_class-Copy1.py  untitled.py  yarknost.ipynb
.github/workflows/: publish.yml
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  srh_data_report.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  srh_data_report.html
docs/_build/html/_sources/: index.rst.txt  modules.rst.txt  srh_data_report.rst.txt
srh/srh_data_report/: .gitignore  Radioheliograph.xlsx  Zhurnal_anten.py  __init__.py  calendarq.py  checks.py  cli.py  report.py  srhcp.py  tabl.py
